tests/idris2/interface008/expected
1/1: Building Deps (Deps.idr)
Error: While processing right hand side of badcard. k is not accessible in this context.

Deps.idr:18:13--18:14
    |
 18 |   badcard = k
    |             ^

